--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-asgiref==3.2.7
-Django==3.0.8
-mysqlclient==1.4.6
-Pillow==7.1.1
-pytz==2019.3
-sqlparse==0.3.1
-environs==7.3.1
+asgiref==3.5.2
+Django==4.1.2
+environs==9.5.0
+marshmallow==3.18.0
+mysqlclient==2.1.1
+packaging==21.3
+Pillow==9.2.0
+pyparsing==3.0.9
+python-dotenv==0.21.0
+pytz==2022.4
+sqlparse==0.4.3
+tzdata==2022.4
