--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-asgiref==3.5.2
-Django==4.1.2
-environs==9.5.0
-marshmallow==3.18.0
-mysqlclient==2.1.1
-packaging==21.3
-Pillow==9.2.0
-pyparsing==3.0.9
-python-dotenv==0.21.0
-pytz==2022.4
-sqlparse==0.4.3
-tzdata==2022.4
+asgiref==3.8.1
+Django==4.2.16
+environs==11.0.0
+marshmallow==3.23.0
+mysqlclient==2.2.4
+packaging==24.1
+pillow==11.0.0
+pyparsing==3.2.0
+python-dotenv==1.0.1
+pytz==2024.2
+sqlparse==0.5.1
+typing_extensions==4.12.2
+tzdata==2024.2
